--- a/imgData.html
+++ b/imgData.html
@@ -16,7 +16,8 @@
     <img id="input" src="image.jpg" hidden /> <!-- datasource -->
     <canvas id="canvas"></canvas> <!-- Rita bilddata på canvas och läs datan från canvasen -->
 
-
+    <div>
     <script>getImage();</script>
+    </div>
 </body>
 </html>
