Gjort linjediagram och utritning av lådagram
gjort det möjligt att byta mellan linje- och lådagram m.m.

--- a/boxPlot2.html
+++ b/boxPlot2.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="boxPlot.js"></script>
+    <script src="boxPlot2.js"></script>
     <title>BoxPlot ritövning med Rect och Path</title>
 </head>
 <body>
-    <h1>Boxplot med temperaturer</h1>
-    <script>drawBoxPlot();</script>
+    <script>drawChart();</script>
+    <h1>Boxplot med kryptokurser</h1>
+    <div>
+    <button id="lineButton">Linjediagram</button>
+    <button id="boxButton">BoxPlot</button>
+    </div>
 </body>
 </html>
