--- a/boxPlot2.html
+++ b/boxPlot2.html
@@ -9,11 +9,20 @@
     <title>BoxPlot ritövning med Rect och Path</title>
 </head>
 <body>
-    <script>drawChart();</script>
     <h1>Boxplot med kryptokurser</h1>
     <div>
-    <button id="lineButton">Linjediagram</button>
-    <button id="boxButton">BoxPlot</button>
+        <button id="line-button">Linjediagram</button>
+        <button id="box-button">BoxPlot</button>
+        <label>Start Date</label>
+        <input type="date" id="start-date">
+        <label>End Date</label>
+        <input type="date" id="end-date">
+        <select name="currency-list" id="currency-list">
+            <option value="USD">USD</option>
+            <option value="EUR">EUR</option>
+        </select>
+        <button id="submit-date">Submit Date</button>
     </div>
+    <script>document.addEventListener("DOMContentLoaded", function(event) { redraw(); });</script>
 </body>
 </html>
